@@ -51,7 +51,6 @@
     <property name="hbase.jarfile" value="hbase-0.20.0.jar" />
     <property name="hbase.test.jarfile" value="hbase-0.20.0-test.jar" />
 	<property name="zookeeper.jarfile" value="zookeeper-hbase-1329.jar" />
-	<property name="guava.jarfile" value="guava-r03.jar" />
 	
     <!-- javac properties -->
     <property name="javac.debug" value="on" />
@@ -130,6 +129,7 @@
     <property name="ivy.dir" location="ivy" />
     <loadproperties srcfile="${ivy.dir}/libraries.properties"/>
     <property name="ivy.jar" location="${ivy.dir}/ivy-${ivy.version}.jar"/>
+    <property name="guava.jar" value="guava-${guava.version}.jar"/>
     <property name="ivy_repo_url" value="http://repo2.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy-${ivy.version}.jar"/>
     <property name="ivysettings.xml" location="${ivy.dir}/ivysettings.xml" />
     <property name="ivy.org" value="org.apache.pig"/>
@@ -168,7 +168,6 @@
 	<path refid="compile.classpath"/>	
         <fileset file="${lib.dir}/${hadoop.jarfile}" />
         <fileset file="${lib.dir}/${hbase.jarfile}" />
-		<fileset file="${lib.dir}/${guava.jarfile}" />
         <fileset file="${lib.dir}/${hbase.test.jarfile}" />
     	<fileset file="${lib.dir}/${zookeeper.jarfile}"/>
     	<fileset file="${ivy.lib.dir}/jackson-mapper-asl-${jackson.version}.jar"/>
@@ -474,7 +473,8 @@
             <zipfileset src="${ivy.lib.dir}/jline-${jline.version}.jar" />
             <zipfileset src="${ivy.lib.dir}/jackson-mapper-asl-${jackson.version}.jar" />
             <zipfileset src="${ivy.lib.dir}/jackson-core-asl-${jackson.version}.jar" />
-            <zipfileset src="${ivy.lib.dir}/joda-time-${joda-time.version}.jar" />
+			<zipfileset src="${ivy.lib.dir}/joda-time-${joda-time.version}.jar" /> 
+            <zipfileset src="${ivy.lib.dir}/${guava.jar}" /> 
         </jar>
         <copy file="${output.jarfile}" tofile="${output.jarfile.backcompat}"/>
     </target>
